--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,12 +17,15 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  intl_phone_field: ^1.4.2
+  
   flutter:
     sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  http: ^0.12.1
 
 dev_dependencies:
   flutter_test:
@@ -34,11 +37,11 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+  assets:
+      - assets/images/
   uses-material-design: true
 
-  assets:
-   - assets/logos/facebook.jpg
-   - assets/logos/google.jpg
+  
 
 
   fonts:
